--- a/project 1/index.html
+++ b/project 1/index.html
@@ -2,29 +2,31 @@
     <head>
         <title>Barking Blogs Seldom Bite | Home</title>
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;700&family=Josefin+Slab:wght@400;600;700&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <header class="header">
-                <h1 class="blog-name">Barking Blogs Seldom Bite</h1>
-                <navigation class="nav">
-                    <ul>
+                <div class="wrapper">
+                    <h1 class="blog-name inner-wrapper">Barking Blogs Seldom Bite</h1>
+                </div>
+                <navigation class="main-nav nav">
+                    <ul class="wrapper"> 
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </navigation>
             </header>
-            <main>
-                
-                
+            <main class="wrapper">
+                <h2 class="inner-wrapper">Welcome to the Barking Blog!</h2>
+                <p class="inner-wrapper">One neve knows what you'll fetch.</p>
             </main>
             <aside>
 
             </aside>
-            <footer>
-                <p>&copy;2020 Santina Croniser</p>
+            <footer class="footer wrapper nav">
+                <p class="inner-wrapper">&copy;2020 Santina Croniser</p>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
