add style for cards

--- a/project 1/index.html
+++ b/project 1/index.html
@@ -20,7 +20,33 @@
             </header>
             <main class="wrapper">
                 <h2 class="inner-wrapper">Welcome to the Barking Blog!</h2>
-                <p class="inner-wrapper">One neve knows what you'll fetch.</p>
+                <p class="inner-wrapper">One never knows what you'll fetch.</p>
+                <div class="card-area inner-wrapper">
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                    <div class="card">
+                        This is a card
+                    </div>
+                </div>
             </main>
             <aside>
 
