--- a/project 1/index.html
+++ b/project 1/index.html
@@ -23,29 +23,76 @@
                 <p class="inner-wrapper">One never knows what you'll fetch.</p>
                 <div class="card-area inner-wrapper">
                     <div class="card">
+                        <figure class="image-container">
+                            <img src="images/thailand-temple.jpg" alt="template at night">
+                            <figcaption>Thailand's many night views</figcaption>
+                        </figure>
                         This is a card
                     </div>
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="images/twisted-trees.jpg" alt="twisted redwood trees viewed from below">
+                            <figcaption>A social distancing hike leads to twisted trees</figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>During the time of COVID-19, hiking was still permitted on <strong>March 29th</strong>. This is what we found.</p>
+                            <button onclick="location.href='blog/twisted-trees.html'">Read more</button>
+                        </div>
                     </div>
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="">
+                            <figcaption></figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>This is a card</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="">
+                            <figcaption></figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>This is a card</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
+
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="">
+                            <figcaption></figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>This is a card</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
+
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="">
+                            <figcaption></figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>This is a card</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
+
                     <div class="card">
-                        This is a card
+                        <figure class="image-container">
+                            <img src="">
+                            <figcaption></figcaption>
+                        </figure>
+                        <div class="card-=content">
+                            <p>This is a card</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
-                    <div class="card">
-                        This is a card
-                    </div>
+
                 </div>
             </main>
             <aside>
