add blog section

--- a/project 1/index.html
+++ b/project 1/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="card">
                         <figure class="image-container">
-                            <img src="">
+                            <img src="images/thipsami.jpg" alt="busy kitchen with chefs in Thipsami restaurant">
                             <figcaption></figcaption>
                         </figure>
                         <div class="card-=content">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="card">
                         <figure class="image-container">
-                            <img src="">
+                            <img src="images/snorkling-bali.jpg" alt="snorkeler with a manate">
                             <figcaption></figcaption>
                         </figure>
                         <div class="card-=content">
