add content to blog

--- a/project 1/index.html
+++ b/project 1/index.html
@@ -8,7 +8,7 @@
         <div class="container">
             <header class="header">
                 <div class="wrapper">
-                    <h1 class="blog-name inner-wrapper">Barking Blogs Seldom Bite</h1>
+                    <h1 class="blog-name ">Barking Blogs Seldom Bite</h1>
                 </div>
                 <navigation class="main-nav nav">
                     <ul class="wrapper"> 
@@ -19,9 +19,9 @@
                 </navigation>
             </header>
             <main class="wrapper">
-                <h2 class="inner-wrapper">Welcome to the Barking Blog!</h2>
-                <p class="inner-wrapper">One never knows what you'll fetch.</p>
-                <div class="card-area inner-wrapper">
+                <h2>Welcome to the Barking Blog!</h2>
+                <p>One never knows what you'll fetch.</p>
+                <div class="card-area ">
                     <div class="card">
                         <figure class="image-container">
                             <img src="images/thailand-temple.jpg" alt="template at night">
@@ -95,11 +95,9 @@
 
                 </div>
             </main>
-            <aside>
-
-            </aside>
+        
             <footer class="footer wrapper nav">
-                <p class="inner-wrapper">&copy;2020 Santina Croniser</p>
+                <p>&copy;2020 Santina Croniser</p>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
