--- a/project 1/index.html
+++ b/project 1/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Barking Blogs Seldom Bite | Home</title>
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;700&family=Josefin+Slab:wght@400;600;700&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
