finaize all pages

--- a/project 1/index.html
+++ b/project 1/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
                     <ul class="wrapper"> 
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="#">Store</a></li>
                     </ul>
                 </navigation>
             </header>
@@ -28,7 +29,10 @@
                             <img src="images/thailand-temple.jpg" alt="template at night">
                             <figcaption>Thailand's many night views</figcaption>
                         </figure>
-                        This is a card
+                        <div class="card-content">
+                            <h3>Thailand Adventures</h3><p>Traveling in Thailand by TukTuk is a must.</p>
+                            <button>Read more</button>
+                        </div>
                     </div>
                     <div class="card">
                         <figure class="image-container">
@@ -36,60 +40,41 @@
                             <figcaption>A social distancing hike leads to twisted trees</figcaption>
                         </figure>
                         <div class="card-=content">
-                            <p>During the time of COVID-19, hiking was still permitted on <strong>March 29th</strong>. This is what we found.</p>
+                            <h3>Twisted Trees</h3><p>During the time of COVID-19, hiking was still permitted on <strong>March 29th</strong>. This is what we found.</p>
                             <button onclick="location.href='blog/twisted-trees.html'">Read more</button>
                         </div>
                     </div>
                     <div class="card">
                         <figure class="image-container">
                             <img src="images/thipsami.jpg" alt="busy kitchen with chefs in Thipsami restaurant">
-                            <figcaption></figcaption>
+                            <figcaption>Thipsami</figcaption>
                         </figure>
                         <div class="card-=content">
-                            <p>This is a card</p>
+                            <h3>Real Pad Thai</h3>
+                            <p>The famous Thipsami restaurant, deemed by the king to be the best!</p>
                             <button>Read more</button>
                         </div>
                     </div>
                     <div class="card">
                         <figure class="image-container">
                             <img src="images/snorkling-bali.jpg" alt="snorkeler with a manate">
-                            <figcaption></figcaption>
+                            <figcaption>Snorkler floating above a manate</figcaption>
                         </figure>
                         <div class="card-=content">
-                            <p>This is a card</p>
+                            <h3>First Time Snorkling</h3>
+                            <p>When we went snorkling in Bali, there were <u>manates!</u></p>
                             <button>Read more</button>
                         </div>
                     </div>
 
                     <div class="card">
                         <figure class="image-container">
-                            <img src="">
-                            <figcaption></figcaption>
+                            <img src="images/sanfrancisco.jpg" alt="San Francisco's golden gate bridge with the city in the background">
+                            <figcaption>San Francisco</figcaption>
                         </figure>
                         <div class="card-=content">
-                            <p>This is a card</p>
-                            <button>Read more</button>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <figure class="image-container">
-                            <img src="">
-                            <figcaption></figcaption>
-                        </figure>
-                        <div class="card-=content">
-                            <p>This is a card</p>
-                            <button>Read more</button>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <figure class="image-container">
-                            <img src="">
-                            <figcaption></figcaption>
-                        </figure>
-                        <div class="card-=content">
-                            <p>This is a card</p>
+                            <h3>A New City</h3>
+                            <p>One day, we moved accross the country. This is <em>our</em> journey.</p>
                             <button>Read more</button>
                         </div>
                     </div>
@@ -102,7 +87,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="#">Store</a></li>
                 </ul>
             </footer>
         </div>
