change <b> to <strong> in index.html

--- a/project 1/index.html
+++ b/project 1/index.html
@@ -40,7 +40,7 @@
                             <figcaption>A social distancing hike leads to twisted trees</figcaption>
                         </figure>
                         <div class="card-=content">
-                            <h3>Twisted Trees</h3><p>During the time of COVID-19, hiking was still permitted on <b><!--Using a <b> element is poor accessibility. ONLY inserting this due to a "requirement" for Udacity.-->March 29th</b>. This is what we found.</p>
+                            <h3>Twisted Trees</h3><p>During the time of COVID-19, hiking was still permitted on <strong>March 29th</strong>. This is what we found.</p>
                             <button onclick="location.href='blog/twisted-trees.html'">Read more</button>
                         </div>
                     </div>
